# tk-zinc

./: .gitignore  Arc.c  Attrs.c  Attrs.h  BUGS  COPYRIGHT  Changes  CharsetUTF8.h  Color.c  Copyright  Curve.c  Draw.c  Draw.h  Field.c  Geo.c  Geo.h  Group.c  Group.h  Icon.c  Image.c  Image.h  Item.c  Item.h  MANIFEST  Makefile.PL  Makefile.in  Map.c  MapInfo.c  MapInfo.h  OverlapMan.c  PostScript.c  PostScript.h  README  README.PERL  Rectangle.c  Reticle.c  Tabular.c  Text.c  Track.c  Track.h  (+26 more)
Perl/: Makefile.PL.in  Zinc.pm
Perl/Zinc/: Debug.pm  Trace.pm  TraceErrors.pm
Perl/demos/: zinc-demos
Perl/demos/demos/zinc_lib/: MagicLens.pl  atomic-groups.pl  color-circular.pl  color-x.pl  curve_bezier.pl  fillrule.pl  groups_in_ATC_strips.pl  icon_zoom_resize.pl  lines.pl  mapinfo.pl  rotation.pl  simpleradar.pl  testGraphics.pl  textInput.pl  transforms.pl  translation.pl  triangles.pl  wheelOfFortune.pl
Perl/demos/demos/zinc_pm/: Wheel.pm
Perl/t/: Import.t  PreviousKnownBugs.t  TestLog.pm  no-test.t  test-no-crash.pl
Python/: Zinc.py.in
Zinc/: Debug.pm  Graphics.pm  Trace.pm  TraceErrors.pm  TraceUtils.pm
demos/: Makefile.PL  allOptions.tcl  atomicGroups.tcl  clipping.tcl  colorCircular.tcl  colorX.tcl  colorY.tcl  contours.tcl  curveBezier.tcl  fillRule.tcl  groupsInAtcStrips.tcl  groupsPriority.tcl  iconTransform.tcl  items.tcl  labelformat.tcl  lines.tcl  mapinfo.tcl  pathTags.tcl  photoAlpha.tcl  reliefs.tcl  rotation.tcl  simpleInteractionTrack.tcl  simpleRadar.tcl  textInput.tcl  tiger.tcl  tkZincLogo.tcl  transforms.tcl  translation.tcl  triangles.tcl  windowContours.tcl  zinc-demos  zinc-widget  zoom.tcl
demos/Tk/demos/zinc_contrib_lib/: TripleRotatingWheel.pl
demos/Tk/demos/zinc_lib/: MagicLens.pl  clipping.pl  color-path-and-conic.pl  color-x.pl  color-y.pl  groups_in_ATC_strips.pl  icon_zoom_resize.pl  testGraphics.pl  tiger.pl
demos/demos/zinc_lib/: Zetris.pl  all_options.pl  items.pl  path_tags.pl  tiger.pl  tkZincLogo.pl  zoom.pl
doc/: refman.tex
fake_TCL_libs/: tclConfig.sh  tkConfig.sh
generic/: Arc.c  Color.c  Color.h  Curve.c  Draw.h  Field.c  Field.h  Geo.h  Group.c  Icon.c  Image.c  Image.h  Item.c  Item.h  List.c  List.h  Map.c  MapInfo.c  OverlapMan.c  OverlapMan.h  PostScript.c  Rectangle.c  Reticle.c  Tabular.c  Text.c  Track.c  Transfo.h  Triangles.c  Types.h  WidgetInfo.h  Window.c  perfos.c  perfos.h  tkZinc.c  tkZinc.h
libtess/: Imakefile  README  alg-outline  dict-list.h  dict.h  memalloc.h  mesh.c  normal.c  normal.h  priorityq-heap.c  priorityq-sort.h  priorityq.h  render.c  render.h  sweep.c  sweep.h  tess.c  tess.h
redhat/: changelog  rules
t/: AnimatedGradient.t  Bbox.t  Coords.t  Images.t  PreviousKnownBugs.t  Text.t  Text2.t  Transformations.t  find.t  test-no-crash.pl  text.t  traceutils.t
tclconfig/: tcl.m4
win/: WinPort.c  makefile.vc
